--- a/split-pipeline.yaml
+++ b/split-pipeline.yaml
@@ -56,15 +56,15 @@ objects:
             checkout([$class: "GitSCM", branches: [[name: "*/${gitBranch}"]], doGenerateSubmoduleConfigurations: false, extensions: [[$class: "RelativeTargetDirectory", relativeTargetDir: "camel-cdi-quickstart"]], submoduleCfg: [], userRemoteConfigs: [[url: "${gitUrl}"]]])
             // setup ci and build
             sh "oc project ci"
-            sh "oc new-app -f camel-cdi-quickstart/ci-template.json -p GIT_URI=${gitUrl} -p GIT_REF=${gitBranch} -n ${project} --dry-run -o yaml | oc apply -f - -n ${project}"
+            sh "oc new-app -f camel-cdi-quickstart/ci-template.json -p GIT_URI=${gitUrl} -p GIT_REF=${gitBranch} -p MAVEN_MIRROR_URL=${mavenMirror} -n ${project} --dry-run -o yaml | oc apply -f - -n ${project}"
 
            // setup test project
            sh "oc project test"
-           sh "oc new-app -f camel-cdi-quickstart/test-template.json -p MAVEN_MIRROR_URL=${mavenMirror} -n ${project} --dry-run -o yaml | oc apply -f - -n ${project}"
+           sh "oc new-app -f camel-cdi-quickstart/test-template.json -n ${project} --dry-run -o yaml | oc apply -f - -n ${project}"
 
             // setup acc project
             sh "oc project acceptance"
-            sh "oc new-app -f camel-cdi-quickstart/acc-template.json -p MAVEN_MIRROR_URL=${mavenMirror} -n ${project} --dry-run -o yaml | oc apply -f - -n ${project}"
+            sh "oc new-app -f camel-cdi-quickstart/acc-template.json -n ${project} --dry-run -o yaml | oc apply -f - -n ${project}"
 
            // back to ci for building
             // sh "oc new-app -f camel-cdi-quickstart/quickstart-template.json -p GIT_URI=${gitUrl} -p GIT_REF=${gitBranch} -p MAVEN_MIRROR_URL=${mavenMirror} -n ${project} --dry-run -o yaml | oc apply -f - -n ${project}"
