made maven url a template parameter

--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -15,6 +15,10 @@ parameters:
   name: GIT_REF
   required: true
   value: master
+- description: Maven Mirror / Nexus
+  dipslayName: Maven Mirror or Nexus URL
+  name: MAVEN_MIRROR_URL
+  required: true
 - name: GITHUB_WEBHOOK_SECRET
   displayName: GitHub Webhook Secret
   description: A secret string used to configure the GitHub webhook.
@@ -52,7 +56,7 @@ objects:
           stage('Create app') {
             def gitUrl = "https://github.com/DeGup/camel-cdi-quickstart.git"
             def gitBranch = "master"
-            def mavenMirror = "http://nexus-ci.10.240.106.249.xip.io/nexus/content/groups/public/"
+            def mavenMirror = "${MAVEN_MIRROR_URL}"
             checkout([$class: "GitSCM", branches: [[name: "*/${gitBranch}"]], doGenerateSubmoduleConfigurations: false, extensions: [[$class: "RelativeTargetDirectory", relativeTargetDir: "camel-cdi-quickstart"]], submoduleCfg: [], userRemoteConfigs: [[url: "${gitUrl}"]]])
             sh "oc new-app -f camel-cdi-quickstart/quickstart-template.json -p GIT_URI=${gitUrl} -p GIT_REF=${gitBranch} -p MAVEN_MIRROR_URL=${mavenMirror} -n ${project} --dry-run -o yaml | oc apply -f - -n ${project}"
           }
